argocd/manifests/jellyfin-invite/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-invite
  namespace: jellyfin-invite
  labels:
    app: jellyfin-invite
    app.kubernetes.io/name: jellyfin-invite
spec:
  type: ClusterIP
  selector:
    app: jellyfin-invite
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
