argocd/manifests/jellyfin-invite/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-invite
  namespace: jellyfin-invite
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    external-dns.alpha.kubernetes.io/target: k3s-prod.levangie.dev
spec:
  ingressClassName: traefik
  rules:
    - host: join.levangie.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-invite
                port:
                  number: 8080
